Fix release workflow: add contents: write permission for GITHUB_TOKEN

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   build-and-release:
     name: Build & Release
     runs-on: macos-15
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout
