Fix LSUIElement missing from built app bundle
xcodegen was regenerating Info.plist from a minimal template on every run,
discarding our custom keys (LSUIElement, NSSupportsAutomaticTermination, etc).
Fix by moving all custom plist properties into project.yml info.properties so
xcodegen includes them in the generated plist instead of being overwritten.

Without LSUIElement=true the app appeared in the Dock rather than menu-bar-only.

--- a/project.yml
+++ b/project.yml
@@ -18,16 +18,28 @@ targets:
     platform: macOS
     sources:
       - path: Guardian
+        excludes:
+          - Info.plist   # managed by xcodegen via info.properties below
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.guardian.app
         PRODUCT_NAME: Guardian
-        INFOPLIST_FILE: Guardian/Info.plist
         CODE_SIGN_ENTITLEMENTS: Guardian/Resources/Guardian.entitlements
         GENERATE_INFOPLIST_FILE: NO
         ENABLE_APP_SANDBOX: NO
+    # xcodegen generates Info.plist from these properties at project.yml's location
     info:
       path: Guardian/Info.plist
+      properties:
+        CFBundleDisplayName: Guardian
+        CFBundleIconFile: AppIcon
+        CFBundleShortVersionString: "1.0.0"
+        CFBundleVersion: "1"
+        NSHumanReadableCopyright: "Copyright © 2026"
+        NSPrincipalClass: NSApplication
+        # Agent app – no Dock icon; lives exclusively in the menu bar
+        LSUIElement: true
+        NSSupportsAutomaticTermination: false
     scheme:
       environmentVariables:
         OS_ACTIVITY_MODE: disable
